force-app/main/default/objects/SLL_Group_Member__c/SLL_Group_Member__c.object-meta.xml
<CustomObject>
    <label>SLL Group Member</label>
    <nameField>
        <displayFormat>SGM-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLL Group Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>