force-app/main/default/objects/SLL_Group_Member__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SLL Group Members</relationshipLabel>
    <relationshipName>SLL_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>