force-app/main/default/objects/SLL_Group_Member__c/fields/Last_Approve_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Approve_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Approve Date</label>
    <type>DateTime</type>
</CustomField>