force-app/main/default/objects/SLL_Group_Member__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2001700001:เป็นผู้ที่เกี่ยวข้อง (ตามประกาศ Single Lending Limit)</fullName>
            </value>
            <value>
                <fullName>2001700003:มีบุคคลในครอบครัวเกี่ยวข้องอย่างมีนัยสำคัญ (นอกเหนือจากเกณฑ์ Single Lending Limit)</fullName>
            </value>
            <value>
                <fullName>2001700004:การจัดกลุ่มลูกหนี้อื่น ๆ</fullName>
            </value>
            <value>
                <fullName>2001700005:การจัดกลุ่มเพื่อติดตามความเสี่ยงภายใน</fullName>
            </value>
            <value>
                <fullName>2001700006:การจัดกลุ่มลูกหนี้ที่ส่งธนาคารกลางอื่น ๆ</fullName>
            </value>
            <value>
                <fullName>2001700002:มีการถือหุ้นหรือกรรมการไขว้กัน</fullName>
                <isActive>false</isActive>
                <label>2001700002:มีการถือหุ้นหรือกรรมการไขว้กัน</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>