force-app/main/default/objects/SLL_Group_Member__c/fields/SLL_Group__c.field-meta.xml
<CustomField>
    <fullName>SLL_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLL Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SLL_Group__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SLL_Group__c</referenceTo>
    <relationshipLabel>SLL Group Members</relationshipLabel>
    <relationshipName>SLL_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>