force-app/main/default/objects/SLL_Group_Member__c/fields/SLL_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>SLL_Group_ID__c</fullName>
    <formula>SLL_Group__r.SLL_Group_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLL Group ID</label>
    <type>Text</type>
</CustomField>